Deluge 1.0.3 (18 October 2008)
 Core:
  * Fix upnp - it should work on more routers now too
  * Fix issue where Deluge would send improper stats to the tracker after a
    pause/resume.
  * Fix issue where fastresume files would be rejected when using FAT32.  This
    would cause the torrent to be rechecked on every startup.
  * Fix ip filtering

 WebUI:
  * Fix White template for Opera
  * Remove max connections per second from config dialog.
 
 Misc:
  * Deluge will now use a system libtorrent library if available.
  * The build system will no longer build libtorrent if a system library is
    detected.

Deluge 1.0.2 (10 October 2008)
 Core:
  * Fix issue where torrents will not be properly added to the session

Deluge 1.0.1 (10 October 2008)
 Core:
  * Change the default max global upload slots to 4 instead of -1 since libtorrent
    will automatically open more slots to meet the upload speed limit.
  * Fix display of tracker error messages
  * Fix add_torrent_url() to download the torrent file in a thread to prevent
    the main thread from blocking and causing the daemon to freeze.
  * Removed the 'Maximum Connections Per Second' setting and replaced it with a
    default setting of 20.  This should alleviate speed issues some are experiencing.
  * Changed max half-open connections default limit to 8 on XP/2000 and 4 on Vista
  * Prevent being able to set file priorities for compactly allocated torrents as
    it is not intended to work.
  * Fix freezing on start-up issues on systems that do not have a properly
    configured localhost entry.
  * Change max connections default setting to 200
  * Fix issue with invalid bencoding from some trackers
  * Plenty of libtorrent updates that should improve core stability

 GtkUI:
  * Improve performance of files tab by only updating when values change
  
 Misc:
  * Fix #187 set a 5 second timer to save the config file after a config value
    has been changed.