@@ -1306,6 +1306,7 @@ Disabled</property>
                                             </child>
                                             <child>
                                               <widget class="GtkLabel" id="label58">
+                                                <property name="visible">True</property>
                                                 <property name="xalign">0</property>
                                                 <property name="label" translatable="yes">Maximum Connection Attempts per Second:</property>
                                               </widget>
@@ -1333,6 +1334,7 @@ Disabled</property>
                                             </child>
                                             <child>
                                               <widget class="GtkSpinButton" id="spin_max_connections_per_second">
+                                                <property name="visible">True</property>
                                                 <property name="can_focus">True</property>
                                                 <property name="xalign">1</property>
                                                 <property name="adjustment">-1 -1 9999 1 10 10</property>
